# fastapi-aplications

./: .env  docker-compose.yml  env.local  prestart.sh  pyproject.toml
app/: main.py
app/auth/: utils.py
app/core/: config.py
app/crud/: base.py
app/database/: __init__.py  base_class.py  db.py
app/exceptions/: base.py
app/models/: mixin.py  user.py
app/schemas/: __init__.py  base.py  user.py
app/services/: auth_service.py
docker-build/: Dockerfile
