[tool.mypy]
strict = true

[project]
name = "fastapi-aplications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "bcrypt>=5.0.0",
    "celery>=5.5.3",
    "fastapi>=0.121.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "uvicorn>=0.38.0",
    "pydantic[email]>=2.12.4",
    "cryptography>=46.0.3",
]
